Wed, 14 June 2006 Daniel R. Fisher
1.  In QMCDansWalkerInitialization, improved the way electrons are
    redistributed if any nuclei are charged after the electrons are
    assigned.

Wed, 7 June 2006 Amos Anderson
1.	Made it easier to add new future walking properties to measure.
2.	Fixed a QMCNuclearForces problem relating to compiling in float.

Fri, 26 May 2006 Daniel R. Fisher
1.  Changed the way electrons are distributed among the nuclei in 
    QMCDansWalkerInitialization.  In calculations on He2, it was
    putting two alpha electrons on one He and two betas on the other.

2.  In QMCFunctions::calculateModifiedGradPsiRatio(), put in a check
    for very small electron velocity.  It was causing a division by
    zero and crashing calculations.

Mon, 22 May 2006 Amos Anderson
1.	Fixed a bug in gamess2qmcbeaver.py. It was mistakenly identifying
	bohr geometries as angstroms.

Mon, 16 May 2006 Amos Anderson
1.	I changed how IeeeMath checks for NaN.

2.	I cleaned a bunch of the non-source files.

Mon, 15 May 2006 Amos Anderson
An important note. There are quite a few changes here, many are "here to stay"
while others will be removed eventually. There are 3 significant changes: future
walking, nuclear forces, and system signalling. While the code seems to be working
well for me on all the systems that I've tried, I would say that this code should
be called "experimental", but because the vast majority of this code is close to
what it will eventually look like, in committing it to cvs, I don't want to create
a different branch that will be difficult to merge later. Instead, I've tagged all
the source files with "may_15_2006" in case you want to get the code as it was
before all these changes.

1.	In CubicSpline, the intitializers now use Array1D array copying.
	Also, added an integrate function.

2.	In LU.cpp, determinant_and_inverse changed the static arrays to
	the regular storage class since the static arrays caused problems